--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 */nbdist/
 */nbactions.xml
 */nb-configuration.xml
+/Practica8UT2/Practica8UT2/build/
+/Practica8UT2/Practica8UT2/nbproject/private/
