--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /Practica8UT2/Practica8UT2/nbproject/private/
 /UT3/PruebaEventos/nbproject/private/
 /UT3/PruebaEventos/build/
+/UT3/Practica1UT3/nbproject/private/
+/UT3/Practica1UT3/build/
+/UT2/Practica7UT2/build/
+/UT2/Practica9UT2/build/
+/UT3/EjemploValidacion/nbproject/private/
+/UT3/EjemploValidacion/build/
