--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /UT2/Practica9UT2/build/
 /UT3/EjemploValidacion/nbproject/private/
 /UT3/EjemploValidacion/build/
+/UT3/Practica2UT3/nbproject/private/
+/UT3/Practica2UT3/build/
