--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 /UT3/EjemploValidacion/build/
 /UT3/Practica2UT3/nbproject/private/
 /UT3/Practica2UT3/build/
+/UT3/ImagenesEjemplo/nbproject/private/
+/UT3/ImagenesEjemplo/build/
+/UT3/Practica3UT3/nbproject/private/
+/UT3/Practica3UT3/build/
