--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /UT3/ImagenesEjemplo/build/
 /UT3/Practica3UT3/nbproject/private/
 /UT3/Practica3UT3/build/
+/UT3/Bundle_pt.properties/nbproject/private/
+/UT3/Bundle_pt.properties/build/
+/UT3/Bundle_pt.properties/dist/
