--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@
 /UT3/Bundle_pt.properties/nbproject/private/
 /UT3/Bundle_pt.properties/build/
 /UT3/Bundle_pt.properties/dist/
+/UT3/Practica4UT3/nbproject/private/
+/UT3/JPanelImagen/nbproject/private/
+/UT3/ProyectoPrueba/nbproject/private/
+/UT3/JPanelImagen/build/
+/UT3/JPanelImagen/dist/
+/UT3/JPanelLogo/nbproject/private/
+/UT3/JPanelLogo/dist/
+/UT3/JPanelLogo/build/
+/UT3/Practica4UT3/build/
