--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /UT3/JPanelLogo/dist/
 /UT3/JPanelLogo/build/
 /UT3/Practica4UT3/build/
+/UT3/Practica5UT3/nbproject/private/
+/UT3/Practica5UT3/build/
