--- a/UT3/Practica5UT3/nbproject/project.properties
+++ b/UT3/Practica5UT3/nbproject/project.properties
@@ -24,14 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProyectoPrueba.jar
+dist.jar=${dist.dir}/Practica5UT3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.JPanelImagen.jar}:\
-    ${reference.JPanelLogo.jar}
+    ${libs.absolutelayout.classpath}:\
+    ${reference.JPanelImagen.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,15 +56,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyectoprueba.ProyectoPrueba
+main.class=practica5ut3.Practica5UT3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.JPanelImagen=../JPanelImagen
-project.JPanelLogo=../JPanelLogo
 reference.JPanelImagen.jar=${project.JPanelImagen}/dist/JPanelImagen.jar
-reference.JPanelLogo.jar=${project.JPanelLogo}/dist/JPanelLogo.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
