--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@
 /UT3/Practica4UT3/build/
 /UT3/Practica5UT3/nbproject/private/
 /UT3/Practica5UT3/build/
+/UT3/MusicaPrueba/nbproject/private/
+/UT3/Practica6UT3/nbproject/private/
+/UT3/Practica6UT3/build/
