Practica5UT3 and Practica6UT3
Additions:
    - Practica6UT3 has been finished and it's ready to be shown to the teacher
    - Practica5UT3 has been almost finished and all images have been downloaded and resized
TODO:
    - Start Practica1UT4
    - Fix Practica5UT3.
KNOWN ISSUES:
    - Images in JPanelImagen load correctly, but if you close Netbeans and reopen it, if you make any change and compile again without choosing the images once again, it will not work because the file path is empty since the property "imagenFondo" contains a jPanel with default values, and this includes an empty path
Notes:
    - I need to show Practica6UT3 to the teacher

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /UT3/MusicaPrueba/nbproject/private/
 /UT3/Practica6UT3/nbproject/private/
 /UT3/Practica6UT3/build/
+/UT3/Practica5UT3/dist/
+/UT3/Practica6UT3/dist/
