--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /UT4/Practica1UT4/nbproject/private/
 /UT4/Practica1UT4/build/
 /UT4/Practica1UT4/dist/
+/UT3/Actividad4_1/nbproject/private/
+/UT4/Actividad4_1/build/
