--- a/UT4/JPanelLogoCineRibera/nbproject/project.properties
+++ b/UT4/JPanelLogoCineRibera/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JPanelLogoCineRibera
+application.vendor=Danim2205
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,17 +25,13 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Actividad4_1.jar
+dist.jar=${dist.dir}/JPanelLogoCineRibera.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.JPanelLogoCineRibera.jar=libs\\JPanelLogoCineRibera.jar
-file.reference.substance-4.3.jar=libs\\substance-4.3.jar
 includes=**
-jar.compress=false
-javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.JPanelLogoCineRibera.jar}:\
-    ${file.reference.substance-4.3.jar}
+jar.compress=true
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=actividad4_1.Actividad4_1
+main.class=jpanellogocineribera.JPanelLogoCineRibera
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
