--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /UT4/Practica1UT4/dist/
 /UT3/Actividad4_1/nbproject/private/
 /UT4/Actividad4_1/build/
+/UT3/XHTMLActividades/nbproject/private/
+/UT3/XHTMLActividades/build/
